# commentAI

./: .env.example  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
data/: sample_reviews.csv
models/baseline/: meta.json  model.joblib  report.txt
nginx/: nginx.conf
src/sentiment/: cli.py  collect_reviews.py  config.py  dataset_tools.py  evaluate.py  gui.py  label_unlabeled.py  lexicon.py  model.py  pipeline.py  predict.py  preprocess.py  scrape.py  select_uncertain.py  server.py  train.py  utils.py
tests/: test_api.py  test_basic.py
