[project]
name = "sentiment-pipeline"
version = "0.1.0"
description = "Sentiment analysis training & data pipeline"
authors = [{name = "You"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
sentiment-cli = "sentiment.cli:main"
